--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "@react-tool/hooks",
   "version": "0.1.0",
+  "description": "React Custom Hooks",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-tool/hooks"
+  },
+  "homepage": "https://github.com/react-tool/hooks",
+  "bugs": {
+    "url": "https://github.com/react-tool/hooks/issues"
+  },
   "private": false,
   "main": "lib/index.js",
   "peerDependencies": {
