--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "jsx": "react",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
