--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2"
   },
+  "keywords": [
+    "react",
+    "hooks",
+    "custom-hooks"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf ./lib && tsc",
